[gd_scene load_steps=17 format=3 uid="uid://btf03p17yj1yv"]

[ext_resource type="Script" path="res://player/player.gd" id="1_4v3ig"]
[ext_resource type="Texture2D" uid="uid://byeriyi4mwrvh" path="res://dev/dev_shadow.png" id="2_6ta7t"]
[ext_resource type="Texture2D" uid="uid://bnjcchhcu6uii" path="res://player/player.png" id="3_mb4ii"]

[sub_resource type="Animation" id="Animation_n8crd"]
resource_name = "idle_down"
length = 0.333337
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteOrigin/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_peh4n"]
resource_name = "idle_left"
length = 0.333337
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteOrigin/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_tep1s"]
resource_name = "idle_right"
length = 0.333337
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteOrigin/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_4yo6t"]
resource_name = "idle_up"
length = 0.333337
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteOrigin/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_np2ws"]
_data = {
"idle_down": SubResource("Animation_n8crd"),
"idle_left": SubResource("Animation_peh4n"),
"idle_right": SubResource("Animation_tep1s"),
"idle_up": SubResource("Animation_4yo6t")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khaiu"]
size = Vector2(66, 16)

[sub_resource type="Animation" id="Animation_jwnrq"]
resource_name = "down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%AttackBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_2m8xd"]
resource_name = "left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%AttackBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-40, -56)]
}

[sub_resource type="Animation" id="Animation_7pc3e"]
resource_name = "right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%AttackBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, -56)]
}

[sub_resource type="Animation" id="Animation_mkaq7"]
resource_name = "up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%AttackBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -112)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3lcla"]
_data = {
"down": SubResource("Animation_jwnrq"),
"left": SubResource("Animation_2m8xd"),
"right": SubResource("Animation_7pc3e"),
"up": SubResource("Animation_mkaq7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4my7p"]
size = Vector2(64, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5ljc"]
size = Vector2(56, 104)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_4v3ig")
sprite_origin_path = NodePath("SpriteOrigin")
hold_origin_path = NodePath("SpriteOrigin/HoldOrigin")
sprite_height_path = NodePath("SpriteOrigin/HoldOrigin/SpriteHeight")
directional_player = NodePath("SpriteOrigin/DirectionalPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_np2ws")
}

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.247059)
position = Vector2(0, -25)
texture = ExtResource("2_6ta7t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_khaiu")

[node name="SpriteOrigin" type="Node2D" parent="."]

[node name="DirectionalPlayer" type="AnimationPlayer" parent="SpriteOrigin"]
libraries = {
"": SubResource("AnimationLibrary_3lcla")
}

[node name="Sprite2D" type="Sprite2D" parent="SpriteOrigin"]
position = Vector2(0, -64)
scale = Vector2(2, 2)
texture = ExtResource("3_mb4ii")
hframes = 5
frame = 1

[node name="HitBox" type="Area2D" parent="SpriteOrigin"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteOrigin/HitBox"]
position = Vector2(0, -60)
shape = SubResource("RectangleShape2D_4my7p")

[node name="AttackBox" type="Area2D" parent="SpriteOrigin"]
unique_name_in_owner = true
position = Vector2(0, -112)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteOrigin/AttackBox"]
shape = SubResource("RectangleShape2D_y5ljc")

[node name="HoldOrigin" type="Node2D" parent="SpriteOrigin"]
unique_name_in_owner = true
position = Vector2(48, 0)

[node name="SpriteHeight" type="Node2D" parent="SpriteOrigin/HoldOrigin"]
position = Vector2(0, -96)

[node name="AttackOrigin" type="Node2D" parent="SpriteOrigin"]
unique_name_in_owner = true
position = Vector2(24, -64)

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
